5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1721_3036.log
== TEST (2019-05-02 19:13:35) 
-- CODE:
from math inport*
x=f
-- ERROR:
File "XXXX", line 1
    from math inport*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:13:37) 
-- CODE:
from math inport*
x=f
-- EXECUTION TIME:
0.172451
-- ERROR:
  File "/home/codebench/codes/1721/3036/main.py", line 1
    from math inport*
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
